[gd_scene load_steps=3 format=3 uid="uid://dfdk7562ehhtp"]

[ext_resource type="Script" path="res://scenes/ui/voting_screen/voting_screen.gd" id="1_kta77"]
[ext_resource type="PackedScene" uid="uid://c243bu478e0su" path="res://scenes/ui/chat/chat.tscn" id="2_u4dx5"]

[node name="VotingScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kta77")
metadata/_edit_use_anchors_ = true

[node name="Chat" parent="." instance=ExtResource("2_u4dx5")]
unique_name_in_owner = true
layer = 2

[node name="CloseChat" type="Button" parent="Chat"]
offset_left = 1071.0
offset_top = 29.0
offset_right = 1112.0
offset_bottom = 73.0
theme_override_font_sizes/font_size = 26
text = "X"

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.14902, 0.14902, 0.14902, 1)
metadata/_edit_use_anchors_ = true

[node name="RichTextLabel" type="RichTextLabel" parent="Background"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -116.0
offset_top = 42.0
offset_right = 134.0
offset_bottom = 82.0
grow_horizontal = 2
theme_override_font_sizes/normal_font_size = 24
text = "Kto jest wykładowcą?"

[node name="Players" type="GridContainer" parent="Background"]
unique_name_in_owner = true
custom_minimum_size = Vector2(600, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.162
anchor_top = 0.171
anchor_right = 0.859
anchor_bottom = 0.676
offset_left = 0.376007
offset_top = 0.192001
offset_right = -0.568054
offset_bottom = -0.0480347
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 2

[node name="EndVoteText" type="RichTextLabel" parent="Background"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.733686
anchor_top = 0.810345
anchor_right = 0.929453
anchor_bottom = 0.899687
grow_horizontal = 0
grow_vertical = 0
bbcode_enabled = true
text = "Głosowanie zakończy się za [time] sekund"
metadata/_edit_use_anchors_ = true

[node name="SkipDecision" type="VBoxContainer" parent="Background"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 35.0
offset_top = -119.0
offset_right = 278.0
offset_bottom = -33.0
grow_vertical = 0

[node name="SkipButton" type="Button" parent="Background/SkipDecision"]
unique_name_in_owner = true
layout_mode = 2
text = "POMIŃ GŁOS"

[node name="Decision" type="HBoxContainer" parent="Background/SkipDecision"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_constants/separation = 10

[node name="DecisionText" type="RichTextLabel" parent="Background/SkipDecision/Decision"]
layout_mode = 2
size_flags_horizontal = 3
text = "Is this your final vote?"
fit_content = true

[node name="DecisionYes" type="Button" parent="Background/SkipDecision/Decision"]
unique_name_in_owner = true
layout_mode = 2
text = "YES"

[node name="DecisionNo" type="Button" parent="Background/SkipDecision/Decision"]
unique_name_in_owner = true
layout_mode = 2
text = "NO"

[node name="OpenChat" type="Button" parent="Background"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -447.0
offset_top = 46.0
offset_right = -342.0
offset_bottom = 77.0
grow_horizontal = 0
text = "OTWÓRZ CHAT"

[node name="ChatBackground" type="ColorRect" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 136.0
offset_right = -149.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.14902, 0.14902, 0.14902, 1)

[connection signal="pressed" from="Chat/CloseChat" to="." method="_on_close_chat_pressed"]
[connection signal="pressed" from="Background/SkipDecision/SkipButton" to="." method="_on_skip_button_pressed"]
[connection signal="pressed" from="Background/SkipDecision/Decision/DecisionYes" to="." method="_on_decision_yes_pressed"]
[connection signal="pressed" from="Background/SkipDecision/Decision/DecisionNo" to="." method="_on_decision_no_pressed"]
[connection signal="pressed" from="Background/OpenChat" to="." method="_on_open_chat_pressed"]
